k8s/08-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: cavalocal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: kfamaguana/cavalocal-web:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: cavalocal
spec:
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 80
