k8s/10-landing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing
  namespace: cavalocal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: landing
  template:
    metadata:
      labels:
        app: landing
    spec:
      containers:
        - name: landing
          image: kfamaguana/cavalocal-landing:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: landing
  namespace: cavalocal
spec:
  selector:
    app: landing
  ports:
    - port: 80
      targetPort: 80
